Fix obstructed element, fix mark-up, and no inline z-index control

--- a/static/css/custom.css
+++ b/static/css/custom.css
@@ -47,3 +47,20 @@ span.multiselect__option.multiselect__option--highlight {
 .float-save{
 	z-index: 20;
 }
+.multiselect__content-wrapper{
+	z-index: 999!important;
+}
+.multiselect--active {
+	z-index: 1000 !important;
+}
+
+.p-0{
+	padding: 0 !important;
+}
+/* .multiselect__select:before {
+	top: 5px !important;
+} */
+.multiselect__select {
+	height: 32px;
+	padding: 0 8px;
+}
